--- a/cafe.html
+++ b/cafe.html
@@ -40,14 +40,14 @@
                         <div class="card">
                             <p class="card-text text-center m-2 text-size"><strong>Cold beverages</strong></p>
                             <div class="card-body">
-                                <img src="resources/iced-coffee-bag-aesthetic.jpg" class="card-img-top" alt="iced coffee">
+                                <img src="https://github.com/nitrosyntax/project-bootstrap/blob/main/iced-coffee-bag-aesthetic.jpg" class="card-img-top" alt="iced coffee">
                                 <div class="card-body">
                                     <h5 class="card-title">Iced coffee</h5>
                                     <p class="card-text">Rs. 100</p>
                                 </div>
                             </div>
                             <div class="card-body">
-                                <img src="resources/iced-tea.jpg" class="card-img-top" alt="iced tea">
+                                <img src="https://github.com/nitrosyntax/project-bootstrap/blob/main/iced-tea.jpg" class="card-img-top" alt="iced tea">
                                 <div class="card-body">
                                     <h5 class="card-title">Iced tea</h5>
                                     <p class="card-text">Rs. 120</p>
@@ -59,14 +59,14 @@
                         <div class="card">
                             <p class="card-text text-center m-2 text-size"><strong>Hot beverages</strong></p>
                             <div class="card-body">
-                                <img src="resources/hot-choc.jpg" class="card-img-top" alt="hot chocolate">
+                                <img src="https://github.com/nitrosyntax/project-bootstrap/blob/main/hot-choc.jpg" class="card-img-top" alt="hot chocolate">
                                 <div class="card-body">
                                     <h5 class="card-title">Hot chocolate</h5>
                                     <p class="card-text">Rs. 150</p>
                                 </div>
                             </div>
                             <div class="card-body">
-                                <img src="resources/hot-coffee.jpg" class="card-img-top" alt="hot coffee">
+                                <img src="https://github.com/nitrosyntax/project-bootstrap/blob/main/hot-coffee.jpg" class="card-img-top" alt="hot coffee">
                                 <div class="card-body">
                                     <h5 class="card-title">Coffee</h5>
                                     <p class="card-text">Rs. 60</p>
@@ -78,14 +78,14 @@
                         <div class="card">
                             <p class="card-text text-center m-2 text-size"><strong>Desserts</strong></p>
                             <div class="card-body">
-                                <img src="resources/strawberry-waffle.jpg" class="card-img-top" alt="strawberry waffles">
+                                <img src="https://github.com/nitrosyntax/project-bootstrap/blob/main/strawberry-waffle.jpg" class="card-img-top" alt="strawberry waffles">
                                 <div class="card-body">
                                     <h5 class="card-title">Strawberry waffles</h5>
                                     <p class="card-text">Rs. 150</p>
                                 </div>
                             </div>
                             <div class="card-body">
-                                <img src="resources/brownies.jpg" class="card-img-top" alt="chocolate brownies">
+                                <img src="https://github.com/nitrosyntax/project-bootstrap/blob/main/brownies.jpg" class="card-img-top" alt="chocolate brownies">
                                 <div class="card-body">
                                     <h5 class="card-title">Chocolate brownies</h5>
                                     <p class="card-text">Rs. 80</p>
@@ -102,13 +102,13 @@
                 <h2 class="text-center mb-4">Gallery</h2>
                 <div class="row text-design">
                     <div class="col-md-4">
-                        <img src="resources/cafe-gallery.jpg" class="img-fluid m-2" alt="gallery of cafe">
+                        <img src="https://github.com/nitrosyntax/project-bootstrap/blob/main/cafe-gallery.jpg" class="img-fluid m-2" alt="gallery of cafe">
                     </div>
                     <div class="col-md-4">
-                        <img src="resources/cafe-decor.jpg" class="img-fluid m-2" alt="decorative set up of coffee and croissant">
+                        <img src="https://github.com/nitrosyntax/project-bootstrap/blob/main/cafe-decor.jpg" class="img-fluid m-2" alt="decorative set up of coffee and croissant">
                     </div>
                     <div class="col-md-4">
-                        <img src="resources/cafe-tea-decor-2.jpg" class="img-fluid m-2" alt="tea arranged aesthetically">
+                        <img src="https://github.com/nitrosyntax/project-bootstrap/blob/main/cafe-tea-decor-2.jpg" class="img-fluid m-2" alt="tea arranged aesthetically">
                     </div>
                 </div>
             </div>
