--- a/cafe.html
+++ b/cafe.html
@@ -47,10 +47,43 @@
                                 </div>
                             </div>
                             <div class="card-body">
-                                <img src="resources/iced-tea.jpg" class="card-img-top" alt="iced tea">
+                                <img src="resources/iced-tea.jpg" class="card-img-top" alt="iced lemon tea">
                                 <div class="card-body">
-                                    <h5 class="card-title">Iced tea</h5>
+                                    <h5 class="card-title">Iced lemon tea</h5>
                                     <p class="card-text">Rs. 120</p>
+                                </div>
+                            </div>
+                            <div class="card-body">
+                                <img src="resources/mojito.jpg" class="card-img-top" alt="classic mojito">
+                                <div class="card-body">
+                                    <h5 class="card-title">Classic mojito</h5>
+                                    <p class="card-text">Rs. 180</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            <p class="card-text text-center m-2 text-size"><strong>Milkshakes</strong></p>
+                            <div class="card-body">
+                                <img src="resources/chocolate-milkshake.jpg" class="card-img-top" alt="chocolate milkshake">
+                                <div class="card-body">
+                                    <h5 class="card-title">Chocolate milkshake</h5>
+                                    <p class="card-text">Rs. 120</p>
+                                </div>
+                            </div>
+                            <div class="card-body">
+                                <img src="resources/vanilla-milkshake.jpg" class="card-img-top" alt="vanilla milkshake">
+                                <div class="card-body">
+                                    <h5 class="card-title">Vanilla milkshake</h5>
+                                    <p class="card-text">Rs. 90</p>
+                                </div>
+                            </div>
+                            <div class="card-body">
+                                <img src="resources/blueberry-milkshake.jpg" class="card-img-top" alt="blueberry milkshake">
+                                <div class="card-body">
+                                    <h5 class="card-title">Blueberry milkshake</h5>
+                                    <p class="card-text">Rs. 150</p>
                                 </div>
                             </div>
                         </div>
@@ -69,6 +102,13 @@
                                 <img src="resources/hot-coffee.jpg" class="card-img-top" alt="hot coffee">
                                 <div class="card-body">
                                     <h5 class="card-title">Coffee</h5>
+                                    <p class="card-text">Rs. 60</p>
+                                </div>
+                            </div>
+                            <div class="card-body">
+                                <img src="resources/masala-chai.jpg" class="card-img-top" alt="masala chai">
+                                <div class="card-body">
+                                    <h5 class="card-title">Masala chai</h5>
                                     <p class="card-text">Rs. 60</p>
                                 </div>
                             </div>
@@ -91,6 +131,40 @@
                                     <p class="card-text">Rs. 80</p>
                                 </div>
                             </div>
+                            <div class="card-body">
+                                <img src="resources/fudge-ice-cream.jpg" class="card-img-top" alt="hot fudge with ice cream">
+                                <div class="card-body">
+                                    <h5 class="card-title">Hot fudge with ice cream</h5>
+                                    <p class="card-text">Rs. 180</p>
+                                    <p class="card-text">(With vanilla ice cream, rate may vary with flavour)</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            <p class="card-text text-center m-2 text-size"><strong>Snacks</strong></p>
+                            <div class="card-body">
+                                <img src="resources/veg-burger.jpg" class="card-img-top" alt="veg burger">
+                                <div class="card-body">
+                                    <h5 class="card-title">Veggie burger</h5>
+                                    <p class="card-text">Rs. 200</p>
+                                </div>
+                            </div>
+                            <div class="card-body">
+                                <img src="resources/fries.jpg" class="card-img-top" alt="peri peri fries">
+                                <div class="card-body">
+                                    <h5 class="card-title">Peri peri fries</h5>
+                                    <p class="card-text">Rs. 100</p>
+                                </div>
+                            </div>
+                            <div class="card-body">
+                                <img src="resources/sandwich.jpg" class="card-img-top" alt="veg cheese grilled sandwich">
+                                <div class="card-body">
+                                    <h5 class="card-title">Veg cheese grilled sandwich</h5>
+                                    <p class="card-text">Rs. 170</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -101,14 +175,29 @@
             <div class="container">
                 <h2 class="text-center mb-4">Gallery</h2>
                 <div class="row text-design">
-                    <div class="col-md-4">
+                    <div class="col-12 col-md-4 col-lg-3">
                         <img src="resources/cafe-gallery.jpg" class="img-fluid m-2" alt="gallery of cafe">
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-12 col-md-4 col-lg-3">
                         <img src="resources/cafe-decor.jpg" class="img-fluid m-2" alt="decorative set up of coffee and croissant">
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-12 col-md-4 col-lg-3">
                         <img src="resources/cafe-tea-decor-2.jpg" class="img-fluid m-2" alt="tea arranged aesthetically">
+                    </div>
+                    <div class="col-12 col-md-4 col-lg-3">
+                        <img src="resources/cafe-arragement.jpg" class="img-fluid m-2" alt="cafe arranegment">
+                    </div>
+                    <div class="col-12 col-md-4 col-lg-3">
+                        <img src="resources/cozy-cafe.jpg" class="img-fluid m-2" alt="cozy cafe area">
+                    </div>
+                    <div class="col-12 col-md-4 col-lg-3">
+                        <img src="resources/cafe-mag.jpg" class="img-fluid m-2" alt="magazines spread with food in cafe">
+                    </div>
+                    <div class="col-12 col-md-4 col-lg-3">
+                        <img src="resources/cafe-out.jpg" class="img-fluid m-2" alt="outdoor cafe">
+                    </div>
+                    <div class="col-12 col-md-4 col-lg-3">
+                        <img src="resources/cafe-food.jpg" class="img-fluid m-2" alt="cafe food arrangement">
                     </div>
                 </div>
             </div>
